--- a/animation.html
+++ b/animation.html
@@ -39,7 +39,7 @@
             <h2>Hvor har jeg fundet inspiration?</h2>
             <h3>→ Designer & illustrator Peeace</h3>
             <p>På dette tema skulle vi vælge en stil vi skulle basere vores spil på. Jeg valgte en artist jeg fandt på Instagram/Dribbble, som hedder Peeace. 
-            Han laver en del fine og retro designs med gode kontrastfarver og et budskab. Jeg synes det passede rigtig fint, til den vibe jeg gerne ville bruge.
+            Han laver en del fine og retro designs med gode kontrastfarver og et budskab. Jeg synes det passede rigtig fint, til den vibe jeg gerne ville ha' frem.
             </p>
             <p><a href="https://www.instagram.com/peeaceworks/" target="_blank">Se hans Instagram her..</a></p>
         </div>
@@ -61,7 +61,7 @@
             <p>03. Grundlæggende animation</p>
             <h2>Det færdige resultat</h2>
             <h3>→ Med alle spilleelementerne implementeret</h3>
-            <p>Spillet endte således. Det  var blevet meget som jeg havde forestillet mig fra starten af, og meget det udtryk jeg gik efter.
+            <p>Spillet endte således. Det var rigtig meget JavaScript under dette tema, så det endte med at blive "et rigtigt spil". Det  var blevet meget som jeg havde forestillet mig fra starten af, og meget det udtryk jeg gik efter.
             Ret lyse og pastelfarver, som matcher meget til påske.
             </p>
             <p><a href="https://lineheight.dk/kea/04_animation/spil/spil.html" target="_blank">Prøv spillet her..</a></p>
