--- a/ommig.html
+++ b/ommig.html
@@ -46,6 +46,38 @@
     </div>
 </div>
 
+<div class="cv">
+    <h2>Curriculum Vitae</h2>
+    <h4>Få et overblik herunder.</h4>
+    <div class="cv_container">
+        <div class="cv_text">
+            <h3>→ NEXT København, mediegrafiker, 2016 - 2020</h3>
+            <p>Direkte efter folkeskolen startede jeg på NEXT. Da jeg ikke var ret gammel da jeg startede der, skulle jeg igennem 2 grundforløb
+            først. Det var  en erhvervsuddannelse, så det meste foregik på min elevplads, hvor jeg fik en masse erhvervserfaring. Der var selvfølgelig også noget
+            "normal" undervisning, men det var ret minimalt.
+            </p>
+        </div>
+        <div class="cv_text">
+            <h3>→ Politikens Lokalaviser & Sjællandske Medier, 2018 - 2021</h3>
+            <p>Af forlængelse til min  uddannelse på NEXT, var det så her jeg endte med at være elev i cirka 4 år. Her lavede jeg for det meste annoncer til både
+            store og mindre virksomheder, som f.eks. Føtex, Norliving og forskellige centre i Nordsjælland. Vi lavede også magasiner til f.eks. jul, eller sommerferierne.
+            </p>
+        </div>
+        <div class="cv_text">
+            <h3>→ Nordic Oily Waste, Marketingassistent, 2021 </h3>
+            <p>Jeg havde lille "halvt sabatår", efter den forholdsvis lange uddannelse på NEXT, og fik derefter et deltids sommerferiejob hos Nordic Oily Waste,
+            hvor jeg lavede lidt mindre oppgaver, som f.eks. plantegninger, manualer & indhold til SoMe.
+            </p>
+        </div>
+        <div class="cv_text">
+            <h3>→ KEA København, multimediedesigner, 2022 - nu</h3>
+            <p>Nu og fremtil 2024 går jeg på KEA, København og læser til multimediedesigner. Her lærer vi om mange forskellige ting, primært design og 
+            lidt webudvikling.
+            </p>
+        </div>
+    </div>
+</div>
+
 <footer>
     <div class="footer_text">
         <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
