--- a/ux.html
+++ b/ux.html
@@ -35,7 +35,8 @@
             <p>02. Grundlæggende UX</p>
             <h2>Konceptudvikling & valg af målgrupper</h2>
             <h3>→ Til virksomheder</h3>
-            <p>Hele dette projekt omhandlede mere omkring at designe efter en bestemt målgruppe, som man selv havde fastlagt. Der var intet kodning.
+            <p>Hele dette projekt omhandlede mere omkring at designe efter en bestemt målgruppe, som man selv havde fastlagt. Der var intet kodning, og det handlede 
+            mere og selve fasen med at finde en målgruppe, konceptudvikling og udarbejde og teste prototyper.
             </p>
         </div>
         <div class="grid2_container">
@@ -58,7 +59,7 @@
             <h2>Fremlæggelse af pitch</h2>
             <h3>→ Feedback og ændringer</h3>
             <p>Her skulle vi også teste vores prototype sammen med andre studerende, og også fremlægge sitet for dem til sidst. Det gav en virkelig
-            god feedbackprocess.
+            god feedbackprocess, som var rigtig nyttig, både fra undervisernes side, men også ens medstuderende.
             </p>
             <p><a href="https://lineheight.dk/kea/06_portfolio/03.03.02_uxpitchdeck_linejespersen.pdf" target="_blank">Se hele pitchen her..</a></p>
 
