--- a/web.html
+++ b/web.html
@@ -43,6 +43,7 @@
             <h2>Moodboard & stil</h2>
             <h3>→ Fastlagt layout med selvvalgt emne</h3>
             <p>Vi fik tilfældigt tildelt en stil, og jeg endte med "Retro Game"-stil, og udfra det, lavede jeg dette moodboard, hvor det meste af min inspiration kom fra.
+            Da det var vores første møde med kodning, fik vi tildelt et allerede lavet layout, som vi skulle følge.
             </p>
         </div>
 
@@ -50,7 +51,8 @@
             <p>01. Grundlæggende web</p>
             <h2>Det færdige site</h2>
             <h3>→ Hvordan jeg stylede det allerede fastlagte layout</h3>
-            <p>På baggrund af den stilart jeg blev tildelt, og hvad jeg synes passede til mit selvvalgte emne, endte det sådan her. 
+            <p>På baggrund af den stilart jeg blev tildelt, og hvad jeg synes passede til mit selvvalgte emne, endte det sådan her. Vi havde frie tøjler for det meste, 
+            altså med billeder og farver, men som sagt blev layoutet bestemt på forhånd.
             </p>
             <p><a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank">Se det færdige site her..</a></p>
         </div>
